Fix duplicate entries in InstalledApplications for 32-bit OSes

Duplicate entries would mess with the association of modules to their
application.

The current logic discards a conflict when it has multiple application
matches. This is because we can't know for sure which of the
applications really owns the module.

Bug: 845274
Change-Id: I1649e80ea9fc6a149351003fd4a1db56d966f770
Reviewed-on: https://chromium-review.googlesource.com/1081565
Commit-Queue: Patrick Monette <pmonette@chromium.org>
Reviewed-by: Greg Thompson <grt@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563718}